--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,13 @@ apply plugin: 'signing'
 
 group = 'co.mercenary-creators'
 
-version = '0.3.0-SNAPSHOT'
+version = '0.4.5-SNAPSHOT'
 
 node {
     download = true
 }
 
-npm_install.dependsOn(npm_cache_clean, clean)
+npm_install.dependsOn(clean)
 
 npm_run_build {
     inputs.files fileTree('public')
