--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datalake-clusters-ui",
-  "version": "9.1.1-SNAPSHOT",
+  "version": "9.2.3-SNAPSHOT",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
@@ -14,7 +14,7 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.3.0",
     "typescript": "3.4.5"
   },
   "scripts": {
