--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "datalake-clusters-ui",
-  "version": "9.3.5-SNAPSHOT",
+  "version": "9.6.5-SNAPSHOT",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
-    "@types/jest": "24.0.12",
     "@types/node": "12.0.0",
     "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
@@ -14,8 +13,8 @@
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.3.0",
-    "typescript": "3.4.5"
+    "react-scripts": "3.4.0",
+    "typescript": "3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,9 +23,6 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8080",
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
